tests/negative/test_let_bad_type_escaped.orb
fnc main() () {
    let (x:i32 0);
    let (y:i32 \x);
};